fix gap under avatar

--- a/src/user/header/Header.scss
+++ b/src/user/header/Header.scss
@@ -30,6 +30,7 @@
 
 		.avatar {
 			width: 100%;
+			display: block;
 		}
 	}
 
